# try-aws-lambda-web-adapter

./: .gitignore  .mise.example.toml  .mise.toml  .mise.toml.example  AGENTS.md  Dockerfile  README.md  pyproject.toml  tasks.md
.github/workflows/: build-and-push.yml  deploy-cfn.yml
bootstrap/: github-oidc-role.yaml  tf-backend-setup.yaml
cloudformation/: app.yaml  edge.yaml  frontend.yaml  index.html
scripts/: update_gh_secrets.py
src/try_aws_lambda_web_adapter/: __init__.py
terraform/: backend.tf  main.tf  outputs.tf  variables.tf
