[project]
name = "try-aws-lambda-web-adapter"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "TAKE Takashi", email = "puller.swipes1h@icloud.com" }
]
requires-python = ">=3.12"
dependencies = [
    "flask==3.1.2",
    "gunicorn==23.0.0",
]

[build-system]
requires = ["uv_build>=0.8.13,<0.9.0"]
build-backend = "uv_build"
